tests/struct_field_defaults_embedded_bad.stderr
tests/struct_field_defaults_embedded_bad.hop:7:9: error: HOP2046: default expression type mismatch for field 'Base'
